--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,6 +9,20 @@ html {
   font-family: Roboto;
 }
 
+h1 {
+  margin-top: 1em;
+}
+
+h2 {
+  margin-bottom: 0;
+  transform: translateY(.8em);
+}
+
+h3 {
+  margin-bottom: .3em;
+  margin-top: 0;
+}
+
 .App {
   text-align: center;
   font-family: Roboto;
@@ -201,7 +215,6 @@ html {
 }
 
 .btn {
-  margin-top: 1em;
   background-color: #3C415C;
   width: 5em;
   height: 3em;
@@ -209,6 +222,12 @@ html {
   border-radius: .1em;
   color: #B4A5A5;
   font-size: 1.5rem;
+  margin-bottom: 1em;
+}
+
+.Add-btn {
+  margin-bottom: 0;
+  margin-top: .8em;
 }
 
 .btn:hover {
@@ -218,7 +237,7 @@ html {
 
 .Topic-list {
   margin-top: 2em;
-  padding: 2em;
+  padding: 3em;
   border-radius: 2em;
   width: 70%;
   background-color: #3C415C;
@@ -259,6 +278,89 @@ html {
   margin: 0;
   margin-bottom: 1em;
   font-size: 2.5rem;
+}
+
+.Daily-k-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 1.5em;
+}
+
+.Daily-k {
+  margin: 0;
+}
+
+.Spin-icon {
+  width: 1.5em;
+  opacity: 70%;
+  margin-left: .5em;
+  cursor: pointer;
+}
+
+.Rotate {
+  animation: spin .3s ease-out;
+}
+
+.Winner-container {
+  background-color: #301B3F;
+  width: 80%;
+  border-radius: 2em;
+  padding: 1em;
+}
+
+.Spin-icon:hover {
+  transform: scale(1.1);
+}
+
+.Bounce {
+  animation: bounce 5.5s ease-in-out;
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+  10% {
+    transform: scale(1.3);
+  }
+  20% {
+    transform: scale(0.7);
+  }
+  30% {
+    transform: scale(1.3);
+  }
+  40% {
+    transform: scale(0.7);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  60% {
+    transform: scale(0.7);
+  }
+  70% {
+    transform: scale(1.3);
+  }
+  80% {
+    transform: scale(0.7);
+  }
+  90% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(365deg);
+  }
 }
 
 @media (max-width: 900px) {
